--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="chat-container">
-        <h1 class="chat-title">Chatbot</h1>
+        <h1 class="chat-title">medAI</h1>
         <div id="chat-window" class="chat-window"></div>
         <div class="input-container">
             <input type="text" id="prompt" class="chat-input" placeholder="Type your message here...">
