--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
         <div id="chat-window" class="chat-window"></div>
         <div class="input-container">
             <input type="text" id="prompt" class="chat-input" placeholder="Type your message here...">
+            <input type="file" id="pdf-upload" class="chat-input" accept="application/pdf">
             <button id="send-btn" class="send-btn">Send</button>
         </div>
     </div>
